--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "engines": {
     "node": "~0.6.17"
   },
-  "dependencies": {},
+  "dependencies": {
+    "expect": "0.0.2",
+    "optimist": "~0.3.4",
+    "mocha": "~1.0.3"
+  },
   "devDependencies": {}
 }
