--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --ui tdd --timeout 8000"
+    "test": "./node_modules/.bin/mocha --ui tdd",
+    "build": "./bin/build.js"
   },
   "engines": {
     "node": "~0.6.17"
