--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "author": "Oncle Tom <thomas@oncle-tom.net> (http://case.oncle-tom.net)",
-  "name": "tld.js",
+  "name": "tld",
   "description": "Handful API to do stuff with domain names and URIs: validity, public etc.",
   "version": "1.0.0",
   "homepage": "https://github.com/oncletom/tld.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/oncletom/tld.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/oncletom/tld.js/issues"
   },
   "main": "index.js",
   "scripts": {
@@ -24,5 +27,9 @@
   "devDependencies": {
     "mocha": "~1.0.3",
     "expect.js": "~0.1.2"
-  }
+  },
+  "keywords": [
+    "tld", "sld", "domain", "travis", "uri", "url", "domain name",
+    "subdomain", "public suffix"
+  ]
 }
