--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Oncle Tom <thomas@oncle-tom.net> (http://case.oncle-tom.net)",
-  "name": "tld",
+  "name": "tldjs",
   "description": "Handful API to do stuff with domain names and URIs: validity, public etc.",
   "version": "1.0.0",
   "homepage": "https://github.com/oncletom/tld.js",
