--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Oncle Tom <thomas@oncle-tom.net> (http://case.oncle-tom.net)",
   "name": "tldjs",
   "description": "Handful API to do stuff with domain names and URIs: validity, public etc.",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "homepage": "https://github.com/oncletom/tld.js",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "build": "./bin/build.js"
   },
   "engines": {
-    "node": ["~0.6.0", "~0.8.0"]
+    "node": "0.6.x || 0.8.x"
   },
   "dependencies": {
     "optimist": "~0.3.4",
