--- a/package.json
+++ b/package.json
@@ -14,17 +14,15 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --ui tdd",
-    "build": "./bin/build.js"
+    "build": "grunt update"
   },
   "engines": {
     "node": "0.6.x || 0.8.x"
   },
   "dependencies": {
-    "optimist": "~0.3.4",
-    "request": "~2.9.202",
-    "shelljs": "0.0.5pre4"
   },
   "devDependencies": {
+    "request": "~2.9.202",
     "mocha": "~1.0.3",
     "expect.js": "~0.1.2"
   },
