--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --ui tdd",
-    "build": "grunt update"
+    "build": "grunt update",
+    "prepublish": "grunt update"
   },
   "engines": {
     "node": "0.6.x || 0.8.x"
