--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "engines": {
     "node": "0.6.x || 0.8.x || 0.10.x"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "request": "~2.12.0",
     "grunt": "~0.4.1",
     "mocha": "~1.7.4",
-    "expect.js": "~0.2.0"
+    "expect.js": "~0.2.0",
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-contrib-jshint": "~0.4.3"
   },
   "keywords": [
     "tld",
