Removed 0.6 support and fixed grunt package

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: "node_js"
 node_js:
-  - 0.6
   - 0.8
   - 0.10
 notifications:
   email:
     on_success: change
     on_failure: change
+before_install:
+  - npm install -g grunt-cli --production
 before_script:
-  - npm install -g grunt@"0.3.x" --production
   - npm run-script build
