Removing prepublish as it's blocking on npm install

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "test-browser": "testling",
     "build": "npm run build-rules && npm run build-browser",
     "build-rules": "grunt update",
-    "build-browser": "browserify -r ./lib/tld.js > dist/tld.js",
-    "prepublish": "npm run build && npm run test"
+    "build-browser": "browserify -r ./lib/tld.js > dist/tld.js"
   },
   "engines": {
     "node": "0.8.x || 0.10.x"
