--- a/package.json
+++ b/package.json
@@ -25,16 +25,14 @@
     "node": "0.8.x || 0.10.x"
   },
   "testling": {
-    "browsers": [
-      "ie6",
-      "ie7",
-      "ie8",
-      "ie9",
-      "firefox/15",
-      "chrome/22",
-      "opera/12",
-      "safari/5.1"
-    ],
+    "browsers": {
+      "iexplore": ["6.0", "7.0", "8.0", "9.0", "10.0"],
+      "iphone": ["6.0"],
+      "firefox/": ["10", "nightly"],
+      "chrome": ["29", "canary"],
+      "opera": ["15", "next"],
+      "safari": ["5.1", "6.0"]
+    },
     "harness": "mocha-tdd",
     "files": "test/*.js"
   },
