--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "request": "~2.12.0",
     "grunt": "~0.4.1",
     "mocha": "~1.13.0",
-    "expect.js": "~0.2.0",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-jshint": "~0.4.3",
     "testling": "~1.5.1",
     "browserify": "~2.34.0",
     "grunt-cli": "~0.1.9",
-    "jshint": "~2.1.11"
+    "jshint": "~2.1.11",
+    "chai": "~1.8.1"
   },
   "keywords": [
     "tld",
