Browser usage documentation

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "tldjs",
+  "name": "tld",
   "main": "index.js",
   "version": "1.2.0",
   "homepage": "https://github.com/oncletom/tld.js",
