--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Thomas Parisot (https://oncletom.io)",
   "name": "tldjs",
-  "description": "Handful API to do stuff with domain names and URIs: validity, public etc.",
+  "description": "JavaScript API to work against complex domain names, subdomains and URIs.",
   "version": "1.3.0",
   "homepage": "https://github.com/oncletom/tld.js",
   "repository": {
