--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,15 @@ language: "node_js"
 node_js:
   - "0.8"
   - "0.10"
+
+cache:
+  directories:
+    - node_modules
+
 notifications:
   email:
     on_success: change
     on_failure: change
+
 before_script:
   - npm run build
