--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Thomas Parisot (https://oncletom.io)",
   "name": "tldjs",
   "description": "JavaScript API to work against complex domain names, subdomains and URIs.",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "homepage": "https://github.com/oncletom/tld.js",
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "npm run lint && npm run test-node",
+    "test": "npm run lint && npm run test-node && npm run test-browser",
     "lint": "jshint --config .jshintrc lib/**/*.js",
     "test-node": "mocha --reporter dot",
     "test-watch": "mocha --reporter dot --watch",
