--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test-watch": "mocha --reporter dot --watch",
     "test-browser": "testling",
     "build": "npm run build-rules && npm run build-browser && npm run build-compress",
-    "build-rules": "grunt update",
+    "build-rules": "node ./bin/update.js",
     "build-browser": "browserify -r ./index.js -s tld > dist/tld.js",
     "build-compress": "uglifyjs -b beautify=false,quote-keys=true dist/tld.js > dist/tld.min.js",
     "prepublish": "npm run build"
@@ -44,16 +44,16 @@
   "dependencies": {},
   "devDependencies": {
     "request": "~2.12.0",
-    "grunt": "~0.4.1",
     "mocha": "~1.13.0",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-jshint": "~0.4.3",
     "testling": "~1.5.1",
     "browserify": "~2.34.0",
-    "grunt-cli": "~0.1.9",
     "jshint": "~2.1.11",
     "chai": "~1.8.1",
-    "uglify-js": "~2.4.3"
+    "uglify-js": "~2.4.3",
+    "async": "~0.2.9",
+    "lodash": "~2.4.1"
   },
   "keywords": [
     "tld",
