--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: "node_js"
-node_js:
-  - "0.8"
-  - "0.10"
+node_js: "0.10"
 
 cache:
   directories:
@@ -11,10 +9,6 @@ notifications:
   email:
     on_success: change
     on_failure: change
-
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
 
 before_script:
   - npm run build
