--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,9 @@ notifications:
     on_success: change
     on_failure: change
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
 before_script:
   - npm run build
