--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Thomas Parisot (https://oncletom.io)",
   "name": "tldjs",
   "description": "JavaScript API to work against complex domain names, subdomains and URIs.",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "homepage": "https://github.com/oncletom/tld.js",
   "repository": {
     "type": "git",
@@ -22,11 +22,13 @@
     "test-node": "mocha --reporter dot",
     "test-watch": "mocha --reporter dot --watch",
     "test-browser": "testling",
-    "build": "npm run build-rules && npm run build-browser && npm run build-compress",
-    "build-rules": "node ./bin/update.js",
-    "build-browser": "browserify -r ./index.js -s tld > dist/tld.js",
-    "build-compress": "uglifyjs -b beautify=false,quote-keys=true dist/tld.js > dist/tld.min.js",
+    "build": "node ./bin/update.js",
     "prepublish": "npm run build"
+  },
+  "tldjs": {
+    "providers": {
+      "publicsuffix": "https://publicsuffix.org/list/effective_tld_names.dat"
+    }
   },
   "testling": {
     "files": "test/*.js",
@@ -44,14 +46,12 @@
   "dependencies": {},
   "devDependencies": {
     "async": "^0.9.0",
-    "browserify": "^4.1.5",
     "expect.js": "^0.3.1",
     "jshint": "^2.5.1",
     "mocha": "^1.19.0",
     "optimist": "^0.6.1",
     "request": "^2.36.0",
-    "testling": "^1.6.1",
-    "uglify-js": "^2.4.13"
+    "testling": "^1.6.1"
   },
   "keywords": [
     "tld",
