Revert "Replacing IE8 functions by lodash ones."
This reverts commit 860fd6aae1553a408079809310999645cb2c4502.

--- a/package.json
+++ b/package.json
@@ -43,11 +43,7 @@
       "android/4.2"
     ]
   },
-  "dependencies": {
-    "lodash.isarray": "^2.4.1",
-    "lodash.map": "^2.4.1",
-    "lodash.some": "^2.4.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "async": "^0.9.0",
     "expect.js": "^0.3.1",
