--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Thomas Parisot (https://oncletom.io)",
   "name": "tldjs",
   "description": "JavaScript API to work against complex domain names, subdomains and URIs.",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "homepage": "https://github.com/oncletom/tld.js",
   "repository": {
     "type": "git",
@@ -45,12 +45,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "async": "^0.9.0",
-    "expect.js": "^0.3.1",
-    "jshint": "^2.5.1",
-    "mocha": "^1.19.0",
-    "request": "^2.36.0",
-    "testling": "^1.6.1"
+    "async": "~0.9.0",
+    "expect.js": "~0.3.1",
+    "jshint": "~2.5.1",
+    "mocha": "~1.19.0",
+    "request": "~2.36.0",
+    "testling": "~1.6.1"
   },
   "keywords": [
     "tld",
