--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,16 @@ cache:
 
 notifications:
   email:
-    on_success: change
     on_failure: change
 
 before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - npm install -g npm
 
 before_script:
   - npm run build
+
+script:
+  - npm test
+  - npm run test-coverage
