--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: "node_js"
-node_js: "0.10"
+
+node_js:
+    - "0.10"
+    - "0.12"
+    - "iojs-1"
+    - "iojs-2"
+    - "iojs-3"
 
 sudo: false
 
