--- a/package.json
+++ b/package.json
@@ -57,12 +57,13 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "async": "^0.9.0",
+    "async": "^1.4.2",
     "blanket": "^1.1.5",
     "expect.js": "^0.3.1",
     "github-changes": "^1.0.0",
     "jshint": "^2.5.1",
-    "mocha": "^1.21.3",
+    "mocha": "^2.3.3",
+    "phantomjs": "^1.9.18",
     "request": "^2.36.0",
     "testling": "^1.7.0",
     "travis-cov": "^0.2.5"
