--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "test": "npm run lint && npm run test-node && npm run test-browser",
     "lint": "jshint --config .jshintrc lib/**/*.js",
-    "test-node": "mocha -R dot",
-    "test-coverage": "mocha -R travis-cov -r blanket",
-    "coverage": "mocha -R html-cov -r blanket > coverage.html",
-    "test-watch": "mocha -R dot --watch",
+    "test-node": "mocha -R dot -r env-test",
+    "test-coverage": "mocha -R travis-cov -r blanket -r env-test",
+    "coverage": "mocha -R html-cov -r blanket -r env-test > coverage.html",
+    "test-watch": "mocha -R dot -r env-test --watch",
     "test-browser": "testling",
     "build": "node ./bin/update.js",
     "generate-changelog": "github-changes -o oncletom -r 'tld.js' -n ${npm_package_version} -a --only-pulls --use-commit-body",
@@ -31,7 +31,7 @@
   },
   "tldjs": {
     "providers": {
-      "publicsuffix": "https://publicsuffix.org/list/effective_tld_names.dat"
+      "publicsuffix-org": "https://publicsuffix.org/list/effective_tld_names.dat"
     }
   },
   "config": {
@@ -59,6 +59,7 @@
   "devDependencies": {
     "async": "^1.4.2",
     "blanket": "^1.1.5",
+    "env-test": "^1.0.0",
     "expect.js": "^0.3.1",
     "github-changes": "^1.0.0",
     "jshint": "^2.5.1",
