--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,12 @@ notifications:
     on_failure: change
 
 before_install:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
   - npm install -g npm
 
 before_script:
-  - npm run build
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
 
 script:
   - npm test
