--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ notifications:
   email:
     on_failure: change
 
+install:
+- rm rules.json
+- npm install --tldjs-update-rules
+
 script:
 - xvfb-run -a npm test
 - npm run test-coverage
