Upgrade development dependencies (#88)
* Use nyc to replace blanket for code coverage

* Upgrade to mocha@3 and phantomjs-prebuild@2

This also solves an issue on macOS Sierra where Phantom@1 was segfaulting

* Adjust a test to check for exception rather than exact value

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ install:
 - rm rules.json
 - npm install --tldjs-update-rules
 
-script:
-- xvfb-run -a npm test
-- npm run test-coverage
+script: xvfb-run -a npm test
 
 deploy:
   provider: npm
