Bundle rules.json on prepublish (#91)
* Expose bound methods

* Add documentation and simplify #init signature

* Update README examples and make custom factory name explicit

* Bundle rules.json on prepublish

They are removed from sources from now on

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "update": "node ./bin/update.js",
     "postinstall": "node ./bin/postinstall.js",
     "generate-changelog": "github-changes -o oncletom -r 'tld.js' -n ${npm_package_version} --only-pulls --use-commit-body",
-    "version": "npm run generate-changelog && git add CHANGELOG.md rules.json"
+    "prepublish": "npm run update",
+    "version": "npm run generate-changelog && git add CHANGELOG.md"
   },
   "tldjs": {
     "providers": {
