--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ notifications:
   email:
     on_failure: change
 
-install:
-- rm rules.json
-- npm install --tldjs-update-rules
+install: npm install --tldjs-update-rules
 
 script: xvfb-run -a npm test
 
