--- a/package.json
+++ b/package.json
@@ -54,10 +54,14 @@
     ]
   },
   "dependencies": {
+    "benchmark": "^2.1.4",
     "punycode": "^1.4.1"
   },
   "devDependencies": {
     "env-test": "^1.0.0",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.7.0",
     "expect.js": "^0.3.1",
     "github-changes": "^1.0.0",
     "jshint": "^2.5.1",
