--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     ]
   },
   "dependencies": {
+    "fast-url-parser": "^1.1.3",
+    "lazy-property": "^1.0.0",
     "punycode": "^1.4.1"
   },
   "devDependencies": {
