--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "benchmark": "node ./bin/benchmark.js",
     "generate-changelog": "github-changes -o oncletom -r 'tld.js' -n ${npm_package_version} --only-pulls --use-commit-body",
     "lint": "jshint --config .jshintrc lib/**/*.js",
-    "postinstall": "node ./bin/postinstall.js",
+    "postinstall": "node ./bin/postinstall.js && opencollective postinstall",
     "posttest": "npm run lint && npm run test-browser",
     "prepublish": "npm run update",
     "test": "nyc mocha -R dot -r env-test",
@@ -55,6 +55,7 @@
     ]
   },
   "dependencies": {
+    "opencollective": "^1.0.3",
     "punycode": "^1.4.1"
   },
   "devDependencies": {
@@ -78,5 +79,10 @@
     "domain name",
     "subdomain",
     "public suffix"
-  ]
+  ],
+  "collective": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/tldjs",
+    "logo": "https://opencollective.com/opencollective/logo.txt"
+  }
 }
