--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "benchmark": "node ./bin/benchmark.js",
     "generate-changelog": "github-changes -o oncletom -r 'tld.js' -n ${npm_package_version} --only-pulls --use-commit-body",
     "lint": "jshint --config .jshintrc lib/**/*.js",
-    "postinstall": "node ./bin/postinstall.js",
+    "postinstall": "node ./bin/postinstall.js && npm run build && npm run build-min",
     "posttest": "npm run lint && npm run test-browser",
     "prepublish": "npm run update",
     "test": "nyc mocha -R dot -r env-test",
     "test-browser": "testling",
     "test-watch": "mocha -R dot -r env-test --watch",
     "update": "node ./bin/update.js",
-    "version": "npm run generate-changelog && git add CHANGELOG.md"
+    "version": "npm run generate-changelog && git add CHANGELOG.md",
+    "build": "browserify index.js --s tldjs > tld.js",
+    "build-min": "browserify index.js --s tldjs | uglifyjs -c > tld.min.js"
   },
   "tldjs": {
     "providers": {
@@ -66,7 +68,9 @@
     "mocha": "^3.5.0",
     "nyc": "^11.1.0",
     "phantomjs-prebuilt": "^2.1.15",
-    "testling": "^1.7.0"
+    "testling": "^1.7.0",
+    "browserify": "^14.5.0",
+    "uglify-js": "^3.1.9"
   },
   "keywords": [
     "tld",
