--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "benchmark": "node ./bin/benchmark.js",
     "generate-changelog": "github-changes -o oncletom -r 'tld.js' -n ${npm_package_version} --only-pulls --use-commit-body",
-    "lint": "jshint --config .jshintrc lib/**/*.js",
+    "lint": "eslint ./lib",
     "postinstall": "node ./bin/postinstall.js",
     "posttest": "npm run lint && npm run test-browser",
     "prepack": "npm run build && npm run build-min",
@@ -66,9 +66,9 @@
     "benchmark": "^2.1.4",
     "browserify": "^15.2.0",
     "env-test": "^1.0.0",
+    "eslint": "^4.18.2",
     "expect.js": "^0.3.1",
     "github-changes": "^1.1.2",
-    "jshint": "^2.5.1",
     "mocha": "^5.0.0",
     "nyc": "^11.4.1",
     "testling": "^1.7.0",
