Remove package-lock.json file from source tree.

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     ]
   },
   "dependencies": {
-    "punycode": "^1.4.1"
+    "punycode": "~1.4.1"
   },
   "devDependencies": {
     "benchmark": "^2.1.4",
