--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,4 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
 node_modules
-coverage*
-.idea
-.nyc_output
-
-rules.json
-tld.js
-tld.min.js
-
-package-lock.json
+dist
+coverage
+build
