--- a/.npmignore
+++ b/.npmignore
@@ -1,17 +1,4 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
 node_modules
-coverage*
-.idea
-.nyc_output
+dist
+coverage
+build
