--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "url": "https://github.com/remusao/tld.js/issues"
   },
   "engines": {
-    "node": ">= 8"
+    "node": ">= 6"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/tldts.js",
+  "module": "dist/tldts.es.js",
+  "jsnext:main": "dist/tldts.es.js",
+  "types": "dist/tldts.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "lib",
+    "tldts.ts"
   ],
   "license": "MIT",
   "scripts": {
@@ -30,7 +32,7 @@
     "clean": "rm -rfv dist build",
     "update": "git submodule foreach git pull origin master && node ./bin/update.js",
     "build": "tsc -p . --module ES6 --outDir build",
-    "bundle": "rollup -c rollup.config.js && google-closure-compiler --js=./dist/index.js --js_output_file=./dist/index.min.js",
+    "bundle": "rollup -c rollup.config.js && google-closure-compiler --js=./dist/tldts.js --js_output_file=./dist/tldts.min.js",
     "benchmark": "./bin/benchmark.js",
     "test": "jest --coverage"
   },
@@ -77,10 +79,5 @@
     "domain name",
     "subdomain",
     "public suffix"
-  ],
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/tldjs",
-    "logo": "https://opencollective.com/opencollective/logo.txt"
-  }
+  ]
 }
