--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "types": ["node", "jest"],
     "target": "ES3",
     "lib": ["ES6"],
+    "moduleResolution": "Node",
     "removeComments": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
@@ -15,6 +16,6 @@
     "strict": true
   },
   "files": [
-    "./lib/index.ts"
+    "./tldts.ts"
   ]
 }
