--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "declarationDir": "dist",
     "types": ["node", "jest"],
     "target": "ES3",
+    "module": "ES6",
+    "outDir": "build",
     "lib": ["ES6"],
     "moduleResolution": "Node",
     "removeComments": true,
